<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/relatLay"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/splash2"
    tools:context="com.tunisia.mshop.authentification.LoginActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/icon2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:paddingBottom="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:layout_below="@+id/relative"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"

        android:background="@drawable/layout_bg"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="15dp"
            android:text="@string/signin"
            android:textColor="@color/primary_dark"
            android:textSize="30sp" />

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="35dp"
            android:id="@+id/coorl">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/editPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>



            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>
        <TextView
            android:id="@+id/forgetpass"
            android:layout_below="@+id/coorl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/primary_dark"
            android:text="@string/forget" />
        <!--
                <EditText
                    android:id="@+id/editMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_below="@+id/textView3"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:hint="@string/email" />

                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/editMail"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/pass"
                    />

                <TextView
                    android:id="@+id/forgetpass"
                    android:layout_below="@+id/editPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/primary_dark"
                    android:layout_marginTop="10dp"
                    android:text="@string/forget" />
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgetpass"
            android:paddingTop="20dp">
            <LinearLayout
                android:id="@+id/linlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:background="@color/primary"
                    style="@style/buttonthm"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register"
                    style="@style/buttonthm"

                    />
            </LinearLayout>
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>

